<resources>
    <string name="app_name">RatReports</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="register">Registration</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_list_sightings">ListSightingsActivity</string>
    <string name="title_activity_rat_sighting_detail">RatSightingDetail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_filter_menu">filterMenu</string>
    <string name="title_activity_input_sighting_activity">input_sighting_activity</string>

    <!-- Strings related to validation -->
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_zipcode">This zipcode is invalid</string>
    <string name="error_invalid_city">This city name is invalid</string>
    <string name="error_invalid_time">This time is invalid</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_graph">GraphActivity</string>


</resources>
